k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-nextjs-quicknotes
  namespace: colossus-e2e-nextjs-quicknotes
  labels:
    app: e2e-nextjs-quicknotes
    managed-by: colossus
spec:
  type: ClusterIP
  selector:
    app: e2e-nextjs-quicknotes
  ports:
    - port: 80
      targetPort: 3000
